// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Navbar Default smoke-test 1`] = `
<div class="bg-base-400">
  <div class="mx-auto lg:container">
    <div class="px-3">
      <div class="navbar">
        <div class="navbar-start">
          <a href="/about"
             class="btn btn-ghost btn-sm normal-case"
          >
            About
          </a>
        </div>
        <div class="navbar-center">
          <a class="align-middle text-lg"
             href="/"
          >
            <span class="text-purple-600">
              git
            </span>
            <span class="text-white">
              workshop
            </span>
            <span class="text-neutral">
              .dev
            </span>
          </a>
        </div>
        <div class="navbar-end gap-4">
          <div class="skeleton h-8 w-20">
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Navbar Logged in smoke-test 1`] = `
<div class="bg-base-400">
  <div class="mx-auto lg:container">
    <div class="px-3">
      <div class="navbar">
        <div class="navbar-start">
          <a href="/about"
             class="btn btn-ghost btn-sm normal-case"
          >
            About
          </a>
        </div>
        <div class="navbar-center">
          <a class="align-middle text-lg"
             href="/"
          >
            <span class="text-purple-600">
              git
            </span>
            <span class="text-white">
              workshop
            </span>
            <span class="text-neutral">
              .dev
            </span>
          </a>
        </div>
        <div class="navbar-end gap-4">
          <div>
            <div class="my-2 text-md flex items-center">
              <div class="avatar flex-none">
                <div class="rounded h-8 w-8">
                  <img class="my-0"
                       src="../test-profile-image.jpg"
                       alt="DanConwayDev"
                  >
                </div>
              </div>
              <div class="pl-3 flex-auto m-auto">
                DanConwayDev
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Navbar NIP07 Loading smoke-test 1`] = `
<div class="bg-base-400">
  <div class="mx-auto lg:container">
    <div class="px-3">
      <div class="navbar">
        <div class="navbar-start">
          <a href="/about"
             class="btn btn-ghost btn-sm normal-case"
          >
            About
          </a>
        </div>
        <div class="navbar-center">
          <a class="align-middle text-lg"
             href="/"
          >
            <span class="text-purple-600">
              git
            </span>
            <span class="text-white">
              workshop
            </span>
            <span class="text-neutral">
              .dev
            </span>
          </a>
        </div>
        <div class="navbar-end gap-4">
          <div class="skeleton h-8 w-20">
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Navbar NIP07Exists smoke-test 1`] = `
<div class="bg-base-400">
  <div class="mx-auto lg:container">
    <div class="px-3">
      <div class="navbar">
        <div class="navbar-start">
          <a href="/about"
             class="btn btn-ghost btn-sm normal-case"
          >
            About
          </a>
        </div>
        <div class="navbar-center">
          <a class="align-middle text-lg"
             href="/"
          >
            <span class="text-purple-600">
              git
            </span>
            <span class="text-white">
              workshop
            </span>
            <span class="text-neutral">
              .dev
            </span>
          </a>
        </div>
        <div class="navbar-end gap-4">
          <button class="btn btn-ghost btn-sm normal-case">
            Login
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Navbar NoNIP07 smoke-test 1`] = `
<div class="bg-base-400">
  <div class="mx-auto lg:container">
    <div class="px-3">
      <div class="navbar">
        <div class="navbar-start">
          <a href="/about"
             class="btn btn-ghost btn-sm normal-case"
          >
            About
          </a>
        </div>
        <div class="navbar-center">
          <a class="align-middle text-lg"
             href="/"
          >
            <span class="text-purple-600">
              git
            </span>
            <span class="text-white">
              workshop
            </span>
            <span class="text-neutral">
              .dev
            </span>
          </a>
        </div>
        <div class="navbar-end gap-4">
          <button class="btn btn-ghost btn-sm normal-case">
            Sign up
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
